# implicit2d

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/app/: main.cxx
cpp/lib/: CMakeLists.txt
cpp/lib/include/implicit2d/: ImplicitFunctionBuilder.h  JsonParser.h  types.h
cpp/lib/src/: ImplicitFunctionBuilder.cxx  JsonParser.cxx
cpp/test/: CMakeLists.txt  main.cxx
models/: model1.json
py/: .gitignore  CMakeLists.txt  README.md  install.sh  package.json  pyproject.toml
py/src/: binder.cxx
